--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -17,8 +18,10 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <div class="hero">
+    <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+    <p><big>Page not found :(</big></p>
+    <p>The requested page could not be found.</p>
+  </div>
 </div>
