--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Edward Compton</title>
-    <link type="text/css" rel="stylesheet" href="/assets/main.css">
+    <link type="text/css" rel="stylesheet" href="./assets/main.css">
 </head>
 
 <body>
@@ -13,6 +13,7 @@
     max-width: 600px;
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -22,10 +23,12 @@
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <div class="hero">
+    <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+    <p><big>Page not found :(</big></p>
+    <p>The requested page could not be found.</p>
+  </div>
 </div>
 
 </body>
