--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Edward Compton</title>
-    <link type="text/css" rel="stylesheet" href="/edwardcomptonnet/assets/main.css"> 
+    <link type="text/css" rel="stylesheet" href="/assets/main.css"> 
 </head>
 
 <body>
