--- a/404.html
+++ b/404.html
@@ -2,12 +2,27 @@
 <html>
 
 <head>
-    <title>Edward Compton</title>
-    <link type="text/css" rel="stylesheet" href="/assets/main.css"> 
+  <title>Edward Compton</title>
+  <link type="text/css" rel="stylesheet" href="/assets/main.css">
 </head>
 
 <body>
-<style type="text/css" media="screen">
+  <div class="container">
+
+    <nav>
+      <a href="" class="nav_title">Edward Compton</a>
+      <div class="nav_icons">
+        <a href="https://github.com/e-compton/" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+        &nbsp;
+        <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
+          <i class="fa fa-linkedin"></i>
+        </a>
+      </div>
+    </nav>
+
+    <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -31,4 +46,5 @@
   </div>
 </div>
 
+  </div>
 </body>
