--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Edward Compton</title>
-  <link rel="shortcut icon" href="assets/favicon.png"> <link type="text/css" rel="stylesheet" href="/assets/main.css">
+  <link rel="shortcut icon" href="assets/favicon.png">
+  <link type="text/css" rel="stylesheet" href="/assets/main.css">
 </head>
 
 <body>
@@ -14,13 +15,21 @@
         <canvas class="canvas" height="900px" width="1920px"></canvas>
       </div>
       <div class="parallax__layer--base container">
+
         <nav>
-          <div class="nav_icons">
-            <a href="https://github.com/e-compton/" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
-            <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank"><i
-                    class="fa fa-linkedin"></i></a>
-          </div>
-        </nav>
+
+  
+
+  <div class="nav_icons">
+    <a href="https://github.com/e-compton/" target="_blank">
+      <i class="fa fa-github"></i>
+    </a>
+    &nbsp;
+    <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
+      <i class="fa fa-linkedin"></i>
+    </a>
+  </div>
+</nav>
 
 
         <div class="hero">
@@ -227,27 +236,74 @@
         </div>
       </div>
     </div>
-    <script>
-      var c = document.querySelector('.canvas');
-      var ctx = c.getContext('2d');
-      ctx.fillStyle = 'white';
-      for (var i = 0; i < 80; i++) {
-        let x = random(0, 1920);
-        let y = smallWeightedRandom(0, 900);
-        let fontSize = random(5, 15);
-        ctx.font = `${fontSize}px monospace`;
-        ctx.fillText(".", x, y);
-      }
 
-      function random(min, max) {
-        return Math.floor(Math.random() * (max - min) + min);
-      } //EDWARD COMPTON CANNOT CODE
+    <script>class Canvas {
+  constructor(canvas) {
+    this.canvas = canvas;
+    this.ctx = c.getContext('2d');
+    this.stars = genStars(80);
+  }
 
+  render() {
+    this.ctx.clearRect(0, 0, this.canvas.width, this.canvas.height);
+    this.ctx.fillStyle = 'white';
+    this.stars.forEach(star => {
+      this.ctx.beginPath();
+      this.ctx.arc(star.x, star.y, star.size, 0, 2*Math.PI);
+      this.ctx.fill();
+    });
+  }
 
-      function smallWeightedRandom(min, max) {
-        return Math.floor(Math.abs(Math.random() - Math.random()) * (max - min) + min);
-      }
-    </script>
+  act() {
+    if (!this.star) {
+      if (this.count < 50) return this.count++;
+      this.star = this.stars[random(0, this.stars.length)];
+      this.orig_size = this.star.size;
+      this.count = 25;
+    }
+    this.star.size = this.orig_size * getScale(this.count--);
+    if (this.count === 0) {
+      this.star.size = this.orig_size;
+      this.star = null;
+    }
+  }
+}
+
+var c = document.querySelector('.canvas');
+let canvas = new Canvas(c);
+canvas.render();
+
+setInterval(() => {
+  canvas.act();
+  canvas.render();
+}, 16);
+
+function genStars(count) {
+  let stars = []
+  for (let i = 0; i < count; i++) {
+    stars.push({
+      x: random(0, 1920),
+      y: random(0, 900),
+      size: random(5, 15)/20
+    });
+  }
+  return stars;
+}
+
+function random(min, max) {
+  return Math.floor(Math.random() * (max - min) + min);
+}
+
+function smallWeightedRandom(min, max) {
+  return Math.floor(Math.abs(Math.random() - Math.random()) * (max - min) + min);
+}
+
+function getScale(num) {
+  let x = num / 100.0;
+  return - 10 * x * x + 10 * x + 1;
+}
+;
+</script>
   </body>
 
 </html>
