--- a/demo.html
+++ b/demo.html
@@ -15,12 +15,14 @@
     <a href="" class="nav_title">Edward Compton</a>
   
 
+  <a href="#" class="nav_link">blog</a>
+
   <div class="nav_icons">
-    <a href="https://github.com/e-compton/" target="_blank">
+    <a class="nav_link" href="https://github.com/e-compton/" target="_blank">
       <i class="fa fa-github"></i>
     </a>
     &nbsp;
-    <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
+    <a class="nav_link" href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
       <i class="fa fa-linkedin"></i>
     </a>
   </div>
