--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Edward Compton</title>
-  <link rel="shortcut icon" href="assets/favicon.png">
+  <link rel="shortcut icon" href="/assets/favicon.png">
   <link type="text/css" rel="stylesheet" href="/assets/main.css">
 </head>
 
@@ -234,7 +234,7 @@
         </div>
 
         <div class="row center">
-          <p>&copy; Edward Compton 2017</p>
+          <p>&copy; Edward Compton 2018</p>
         </div>
       </div>
     </div>
@@ -247,7 +247,8 @@
   }
 
   render() {
-    this.ctx.clearRect(0, 0, this.canvas.width, this.canvas.height);
+    this.ctx.fillStyle = '#1e1e1e';
+    this.ctx.fillRect(0, 0, this.canvas.width, this.canvas.height);
     this.ctx.fillStyle = 'white';
     this.stars.forEach(star => {
       this.ctx.beginPath();
@@ -275,10 +276,10 @@ var c = document.querySelector('.canvas');
 let canvas = new Canvas(c);
 canvas.render();
 
-setInterval(() => {
-  canvas.act();
-  canvas.render();
-}, 16);
+// setInterval(() => {
+//   canvas.act();
+//   canvas.render();
+// }, 16);
 
 function genStars(count) {
   let stars = []
