--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Edward Compton</title>
+  <link rel="shortcut icon" href="/assets/favicon.png">
   <link type="text/css" rel="stylesheet" href="/assets/main.css">
 </head>
 
