--- a/blog.html
+++ b/blog.html
@@ -32,29 +32,10 @@
 </nav>
 
 
-    <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
+    
 
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <div class="hero">
-    <h1>404</h1>
-
-    <p><big>Page not found :(</big></p>
-    <p>The requested page could not be found.</p>
-  </div>
-</div>
-
+    <div class="row center">
+      <p>&copy; Edward Compton 2018</p>
+    </div>
   </div>
 </body>
