--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
     <nav>
 
   
-    <a href="" class="nav_title">Edward Compton</a>
+    <a href="https://edwardcompton.net" class="nav_title">Edward Compton</a>
   
 
   <a href="/blog" class="nav_link">blog</a>
